<resources>
    <string name="app_name">BCLauncher</string>
    <string name="pkg_navi">com.autonavi.amapauto</string>
    <string name="pkg_google_navi">com.google.android.apps.maps</string>
    <string name="pkg_voice">com.unibroad.voiceassistant</string>
    <string name="pkg_txznet">com.txznet.txz</string>
    <string name="path_upgrade_canbox">storage/sdcard0/can_app.bin</string>
    <string name="path_upgrade_local_canbox">storage/sdcard0/smartpie_update/can_app.bin</string>
    <string name="path_upgrade_mcu">storage/sdcard0/BENZ_MCU.BIN</string>
    <string name="path_upgrade_local_mcu">storage/sdcard0/smartpie_update/BENZ_MCU.BIN</string>
    <string name="path_upgrade_system">/storage/sdcard0/update.zip</string>
    <string name="path_upgrade_app">/storage/sdcard0/Launcher.apk</string>
    <string name="path_upgrade_config">/storage/sdcard0/update</string>
    <string name="path_upgrade_file">storage/sdcard0/smartpie_update</string>
    <string name="carbt_name">MB Bluetooth</string>
    <string name="name_connect_BT">BT</string>
    <string name="name_connect_AUX">AUX</string>
    <string name="name_connect_USB">USB</string>
    <string name="name_connect_USB1">USB1</string>
    <string name="name_main_radio">FM/CD</string>
    <string name="name_tvivw_week0">Sunday</string>
    <string name="name_tvivw_week1">Monday</string>
    <string name="name_tvivw_week2">Tuesday</string>
    <string name="name_tvivw_week3">Wednesday</string>
    <string name="name_tvivw_week4">Thursday</string>
    <string name="name_tvivw_week5">Friday</string>
    <string name="name_tvivw_week6">Saturday</string>
    <string name="name_date_year">/</string>
    <string name="name_date_month">/</string>
    <string name="name_date_day" />
    <string name="name_time_am">am</string>
    <string name="name_time_pm">pm</string>
    <string name="wlan">WLAN</string>
    <string name="wifi_default_name">MyBenz</string>
    <string name="msg_car_light_none" />
    <string name="name_car_suv">SUV</string>
    <string name="pageLoadWait">loading…</string>
    <string name="msg_bluetooth_loading">loading...</string>
    <string name="msg_car_door_front">engine cover open</string>
    <string name="msg_car_door_left_front">left front door open</string>
    <string name="msg_car_door_right_front">right front door open</string>
    <string name="msg_car_door_left_back">left back door open</string>
    <string name="msg_car_door_right_back">right back open</string>
    <string name="msg_car_door_back">tail box open</string>
    <string name="msg_car_door_unclose">door open</string>
    <string name="air_state">Air OFF</string>
    <string name="name_callphone_record">Records</string>
    <string name="name_callphone_book">Contacts</string>
    <string name="string_setting_connect">Connect</string>
    <string name="string_setting_disconnect">Disconnect</string>
    <string name="string_callphone_blue_no">not connected</string>
    <string name="string_callphone_blue_yes">connected</string>
    <string name="string_callphone_confirm">OK</string>
    <string name="string_callphone_shouquan">Please search the name through your phone</string>
    <string name="string_callphone_yes">YES</string>
    <string name="string_callphone_no">NO</string>
    <string name="string_callphone_phoneNum_null">can not be empty！</string>
    <string name="bluetooth_music_noplay">Bluetooth music not playing</string>
    <string name="bluetooth_talking">calling  %1$s</string>
    <string name="bluetooth_unknow_city">unknown location</string>
    <string name="bluetooth_incoming">incoming</string>
    <string name="bluetooth_outgoing">outgoing</string>
    <string name="bluetooth_phonenum_error">number error</string>
    <string name="bluetooth_unknow_number">unknown number</string>
    <string name="bluetooth_telbook_synchronize">The address book is in sync</string>
    <string name="string_callphone_now_call_in">caller ID...</string>
    <string name="string_callphone_now_call_out">dialing...</string>
    <string name="string_callphone_tonghuazhong">talking</string>
    <string name="PAUSE_">pause</string>
    <string name="NOSOURCElanya">un connect</string>
    <string name="NOSOURCElanya1">no bluetooth connection,please use cellphone to call</string>
    <string name="btmusic">Bluetooth</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="name_setting_navi">Navigation</string>
    <string name="name_setting_language">Language</string>
    <string name="name_setting_reverse">Reverse</string>
    <string name="name_setting_version">Version</string>
    <string name="name_setting_wifi">Network</string>
    <string name="name_setting_sound">Volume</string>
    <string name="name_setting_system">System</string>
    <string name="originalreverse">Original Reverse</string>
    <string name="newaddreverse">Rearloader Reverse</string>
    <string name="addreverse360">360 Panoramic Reverse</string>
    <string name="name_main_navi">Navigation</string>
    <string name="name_main_phone">Phone</string>
    <string name="name_main_media">Media</string>
    <string name="name_main_recorder">Record</string>
    <string name="name_main_carlife">CarLife</string>
    <string name="name_main_browser">Browser</string>
    <string name="name_main_android">Apps</string>
    <string name="name_main_setting">Settings</string>
    <string name="name_main_instrument">Dashboard</string>
    <string name="name_btn_submit">submit</string>
    <string name="name_btn_affirm">ok</string>
    <string name="name_btn_save">save</string>
    <string name="name_btn_cancel">cancel</string>
    <string name="close">close</string>
    <string name="disp">Display</string>
    <string name="uninstall">uninstall</string>
    <string name="uninstall_title">Confirm uninstall %1$s？</string>
    <string name="msg_check_upgrade_error">Upgrade file error!</string>
    <string name="msg_check_out_of_memory">failed to copy file!</string>
    <string name="msg_check_no_upgrade_file">no new version</string>
    <string name="msg_check_had_upgrade_file">a new version \10 renew？</string>
    <string name="msg_upgrade_copy_file">copy file</string>
    <string name="msg_upgrading">upgrading</string>
    <string name="msg_upgrade_finish">upgrade finish！</string>
    <string name="msg_car_light_small">lamplet open</string>
    <string name="msg_car_light_big">headlight open</string>
    <string name="running_curspeed">speed:</string>
    <string name="running_rotate_speed">Rev-speed:</string>
    <string name="running_outside_temperature">Outdoor-temp:</string>
    <string name="running_distance">T Mileage:</string>
    <string name="running_remain_distance">E Mileage:</string>
    <string name="msg_loading">loading…</string>
    <string name="msg_usb_loading">Scanning the U disk…</string>
    <string name="msg_change_audio">Auto Switching Audio…</string>
    <string name="handbrake_on">Brake \10pull</string>
    <string name="handbrake_off">Brake \10loosen</string>
    <string name="safetybelt_on">Seat belt \10fastened</string>
    <string name="safetybelt_off">Seat belt \10unfasten</string>
    <string name="remainder_range">E Mileage\10%1$skm</string>
    <string name="no_call_record">no call records</string>
    <string name="no_call_linkman">no contacts</string>
    <string name="no_media_data">no media file</string>
    <string name="data">Data</string>
    <string name="wifi_ap">WIFI AP Settings</string>
    <string name="wifi_name">username:</string>
    <string name="wifi_pwd">password:</string>
    <string name="msg_wifi_switch_close">The switch did not open</string>
    <string name="msg_save_ok">save success!</string>
    <string name="msg_error_input_wifiap">hot name cannot contain special characters!</string>
    <string name="msg_error_input_wifiap1">hot name cannot be empty!</string>
    <string name="msg_wifi_list_err">wifi error list!</string>
    <string name="msg_wifi_err_pwd_unjoin">password is not correct, unable to add</string>
    <string name="msg_wifi_unjoin">cannot join</string>
    <string name="msg_wifiap_input_pwd">enter the password for hot</string>
    <string name="name_wifiap_hadpwd">do not use the password</string>
    <string name="msg_un_connect_to">unable to connect</string>
    <string name="msg_input_pwd">please enter a password!</string>
    <string name="msg_wifi_pwd">password:</string>
    <string name="name_btn_join">add</string>
    <string name="name_btn_connect">link</string>
    <string name="name_btn_cutconnect">Disconnected</string>
    <string name="name_btn_cancehadsave">cancel save</string>
    <string name="msg_error_pwd_min_8">password length cannot be less than eight!</string>
    <string name="msg_factory_set">Factory pattern</string>
    <string name="msg_factory_pwd">password:</string>
    <string name="msg_factory_err_pwd_unjoin">password mistake!</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_hint">Please enter problems or Suggestions...</string>
    <string name="setting_feedback_error">Please enter problems or Suggestions</string>
    <string name="setting_linkphone">Telephone</string>
    <string name="setting_linkphone_hint">Certificate, convenient we contact you</string>
    <string name="net_error">network anomaly</string>
    <string name="bt_reconnect">join(%1$ss)</string>
    <string name="bt_connect_help">help</string>
    <string name="msg_data_close">Data already closed</string>
    <string name="msg_data_open">Data already opened</string>
    <string name="name_reverse_type">Reverse type</string>
    <string name="name_reverse_voice_set">The media setting when reversing</string>
    <string name="string_normal">Normal</string>
    <string name="string_mute">Mute</string>
    <string name="name_setting">Setting</string>
    <string name="name_system">System</string>
    <string name="string_original_setting">Wheel control the OriginalCar switch</string>
    <string name="string_navi_mix">Navigation mixing</string>
    <string name="string_air_hide">Hidden air conditioning display</string>
    <string name="string_reboot_system">Restart System</string>
    <string name="string_restore_factory">Restore factory settings</string>
    <string name="string_reboot_system_title">Please confirm whether restart System?</string>
    <string name="string_restore_factory_title">Please confirm whether restore factory settings?</string>
    <string name="name_navi_sound">FL speaker volume</string>
    <string name="name_dv_sound">VideoInput volume</string>
    <string name="name_media_mix">Mixing proportion</string>
    <string name="name_media_sound">Media volume</string>
    <string name="name_radio_type">Radio screen</string>
    <string name="name_config_set">Configure</string>
    <string name="name_original_navi">Navigation</string>
    <string name="name_have">YES</string>
    <string name="name_not_have">NO</string>
    <string name="name_connect_type">Connection</string>
    <string name="name_screen_resolution">Screen param</string>
    <string name="name_usb_num">USB Number</string>
    <string name="string_original_media">Please confirm the original car media</string>
    <string name="string_exist_aux">AUX exist?</string>
    <string name="string_activate_aux">Start activating AUX</string>
    <string name="string_start">start</string>
    <string name="string_cancel">cancel</string>
    <string name="string_activating_aux">Activating AUX...</string>
    <string name="name_main_voice">Cortana</string>
    <string name="string_vwakeup">Voice Wake-up</string>
    <string name="name_help">help</string>
    <string name="name_play_type">Play mode</string>
    <string name="name_play_power_amplifier">power amplifier</string>
    <string name="name_play_original">original car</string>
</resources>