<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/xuanxiang_geshi_di" android:layout_width="450dp" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/name_reverse_type"/>
    <RadioGroup android:orientation="vertical" android:id="@+id/reverse_type" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/originalreverse" android:button="@drawable/setting_check_btn" android:text="@string/originalreverse" style="@style/DaohangDialogItem"/>
        <RadioButton android:id="@+id/newaddreverse" android:button="@drawable/setting_check_btn" android:text="@string/newaddreverse" style="@style/DaohangDialogItem"/>
        <RadioButton android:id="@+id/addreverse360" android:button="@drawable/setting_check_btn" android:text="@string/addreverse360" style="@style/DaohangDialogItem"/>
    </RadioGroup>
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/name_reverse_voice_set"/>
    <RadioGroup android:orientation="vertical" android:id="@+id/voiceset" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:id="@+id/mute" android:button="@drawable/setting_check_btn" android:text="@string/string_mute" style="@style/DaohangDialogItem"/>
        <RadioButton android:id="@+id/normal" android:button="@drawable/setting_check_btn" android:text="@string/string_normal" style="@style/DaohangDialogItem"/>
    </RadioGroup>
</LinearLayout>
