<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:background="@drawable/set_di2" android:layout_width="wrap_content" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/versionLayout" android:paddingLeft="8dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="80dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="15dp" android:layout_marginRight="20dp" android:layout_weight="2">
            <TextView android:textSize="@dimen/content_textsize" android:textColor="@android:color/white" android:padding="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_feedback"/>
            <EditText android:textSize="22sp" android:textColor="@android:color/white" android:gravity="top|left|center_vertical|center_horizontal|center" android:id="@+id/suggest" android:background="@drawable/shape_bg_edit" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/setting_feedback_hint" android:lines="5"/>
            <TextView android:textSize="@dimen/content_textsize" android:textStyle="italic" android:textColor="@android:color/white" android:padding="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_linkphone"/>
            <EditText android:textSize="22sp" android:textColor="@android:color/white" android:id="@+id/phoneNum" android:background="@drawable/shape_bg_edit" android:padding="3dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/setting_linkphone_hint" android:singleLine="true" android:inputType="phone"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <Button android:textSize="@dimen/content_textsize" android:textColor="#ffffffff" android:id="@+id/affirmBtn" android:background="@drawable/bt_selector_comm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:text="@string/name_btn_submit"/>
            <Button android:textSize="@dimen/content_textsize" android:textColor="#ffffffff" android:id="@+id/cancelBtn" android:background="@drawable/bt_selector_comm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_btn_cancel"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
