<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/xuanxiang_geshi_di" android:layout_width="450dp" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="450dp" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@+id/play_model_layout" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginTop="30dp">
            <TextView android:textSize="20sp" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_play_type"/>
            <RadioGroup android:orientation="vertical" android:id="@+id/play_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
                <RadioButton android:id="@+id/play_original" android:layout_width="match_parent" android:button="@drawable/setting_check_btn" android:text="@string/name_play_original" style="@style/DaohangDialogItem"/>
                <RadioButton android:id="@+id/play_power_amplifier" android:layout_width="match_parent" android:button="@drawable/setting_check_btn" android:text="@string/name_play_power_amplifier" style="@style/DaohangDialogItem"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/configure_view" android:layout_width="450dp" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="450dp" android:layout_height="wrap_content">
                <TextView android:textSize="20sp" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:text="@string/name_radio_type" android:layout_centerVertical="true"/>
                <TextView android:textSize="25sp" android:textColor="@color/white_text" android:id="@+id/help" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:text="@string/name_help" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RadioGroup android:orientation="vertical" android:id="@+id/radioset" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioButton android:id="@+id/stripe" android:layout_height="85dp" android:button="@drawable/setting_check_btn" android:drawableRight="@drawable/radio_stripe" style="@style/DaohangDialogItem"/>
                <RadioButton android:id="@+id/square" android:layout_height="85dp" android:layout_marginTop="10dp" android:button="@drawable/setting_check_btn" android:drawableRight="@drawable/radio_square" style="@style/DaohangDialogItem"/>
            </RadioGroup>
            <TextView android:textSize="20sp" android:textColor="@color/white_text" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/name_config_set"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/stripe_layout" android:layout_width="400dp" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_original_navi"/>
                    <RadioGroup android:orientation="horizontal" android:id="@+id/original_navi" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
                        <RadioButton android:id="@+id/navi_have" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_have" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                        <RadioButton android:id="@+id/navi_no" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_not_have" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_connect_type"/>
                    <RadioGroup android:orientation="horizontal" android:id="@+id/connect_type" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
                        <RadioButton android:id="@+id/connect_BT" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_connect_BT" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                        <RadioButton android:id="@+id/connect_AUX" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_connect_AUX" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/square_layout" android:layout_width="400dp" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:id="@+id/usb_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_usb_num" android:layout_centerVertical="true"/>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <Spinner android:id="@+id/usb_configure" android:background="@drawable/shape_bg_edit" android:layout_width="120dp" android:layout_height="50dp" android:layout_marginLeft="40dp" android:dropDownWidth="120dp" android:spinnerMode="dropdown"/>
                        <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-20dp" android:text="▼" android:layout_centerVertical="true"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_connect_type"/>
                    <RadioGroup android:orientation="horizontal" android:id="@+id/connect_type1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
                        <RadioButton android:id="@+id/connect_BT1" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_connect_BT" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                        <RadioButton android:id="@+id/connect_usb" android:layout_width="0dp" android:button="@drawable/setting_check_btn" android:text="@string/name_connect_USB1" android:layout_weight="1" style="@style/DaohangDialogItem"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:id="@+id/screen_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_screen_resolution"/>
            <RelativeLayout android:orientation="horizontal" android:layout_width="400dp" android:layout_height="wrap_content">
                <Spinner android:id="@+id/configure_model" android:background="@drawable/shape_bg_edit" android:layout_width="120dp" android:layout_height="50dp" android:layout_marginLeft="40dp" android:dropDownWidth="120dp" android:spinnerMode="dropdown"/>
                <TextView android:textSize="@dimen/content_textsize" android:textColor="@color/white_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="140dp" android:text="▼" android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
