<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/xuanxiang_geshi_di" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:gravity="center_vertical" android:id="@+id/navi_tv" android:background="@drawable/bt_selector_setting_item_beijing" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="40dp" android:text="@string/name_navi_sound"/>
    <com.touchus.benchilauncher.views.SoundSetView android:id="@+id/naviSound" android:layout_width="500dp" android:layout_height="wrap_content" android:layout_margin="10dp"/>
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:gravity="center_vertical" android:id="@+id/media_tv" android:background="@drawable/bt_selector_setting_item_beijing" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginRight="40dp" android:text="@string/name_media_sound"/>
    <com.touchus.benchilauncher.views.SoundSetView android:id="@+id/mediaSound" android:layout_width="500dp" android:layout_height="wrap_content" android:layout_margin="10dp"/>
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:gravity="center_vertical" android:id="@+id/mix_tv" android:background="@drawable/bt_selector_setting_item_beijing" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginRight="40dp" android:text="@string/name_media_mix"/>
    <com.touchus.benchilauncher.views.SoundSetView android:id="@+id/mixSound" android:layout_width="500dp" android:layout_height="wrap_content" android:layout_margin="10dp"/>
    <TextView android:textSize="20sp" android:textColor="@color/white_text" android:gravity="center_vertical" android:id="@+id/dv_tv" android:background="@drawable/bt_selector_setting_item_beijing" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginRight="40dp" android:text="@string/name_dv_sound"/>
    <com.touchus.benchilauncher.views.SoundSetView android:id="@+id/dvSound" android:layout_width="500dp" android:layout_height="wrap_content" android:layout_margin="10dp"/>
</LinearLayout>
